<resources>
    <string name="app_name">Fanlar akademiyasi</string>
    <string name="password">Parol</string>
    <string name="news">Qayta Aloqa</string>
    <string name="email">Login</string>
    <string name="login">Kirish</string>
    <string name="content">geografik xaritadan topa olmaydigan sirli joy. Antik davrga borib taqaluvchi nom va ushbu provinsiyani o‘rab olgan sir-u sinoat tarixning ajralmas qismi hisoblanadi. Million yillar avval vulqondan chiqqan lava va tabiiy jarayonlar tufayli bu yerda noyob, o‘zga sayyoranikiga o‘xsh</string>
    <string name="time">02.07.2023</string>
    <string name="fullname">Qosimov Shahrizod Bahrom o\'g\'li</string>
    <string name="full_name">Qosimov Shahrizod</string>
    <string name="full_name_s">Ismi sharifi :</string>
    <string name="passport_data">AA7140727</string>
    <string name="passport_data_s">Passport ma\'lumoti :</string>
    <string name="phone_number">+998901363314</string>
    <string name="phone_number_s">Telefon raqami :</string>
    <string name="birth_date">12.31.1999</string>
    <string name="birth_date_s">Tug\'ilgan sanasi :</string>
    <string name="address">Qashqadaryo viloyati Qamashi tumani Qorabog\' MFY</string>
    <string name="address_s">Yashash manzili :</string>
    <string name="recipient">Fizika Matematika kompleksi</string>
    <string name="recipient_s">Qabul qiluvchi :</string>
    <string name="message">Иш берувчи  Иш берувчининг номи  ва ташкилий ҳуқуқий шакли  номидан Иш берувчининг номидан шартнома тузиш бўйича вакилга шартнома тузиш ҳуқуқини берувчи ҳужжат  асосида ҳаракат қилувчи Иш берувчининг номидан иш олиб борувчи шахс лавозими, Ф.И.О.си орқали  Сиздан Иш берувчининг фуқаролик жавобгарлигини мажбурий суғурта қилиш қоидаларида назарда тутилган шартларда иш берувчининг фуқаролик жавобгарлигини мажбурий суғурта қилиш шартномасини тузишни сўрайди.</string>
    <string name="message_s">Murojat matni :</string>
    <string name="complaint">Shikoyat</string>
    <string name="application">Ariza</string>
    <string name="offer">Taklif</string>
    <string name="time_s">Jo\'natilgan vaqti :</string>
    <string name="corruption">Korrupsiyaga oid</string>
    <string name="personal">Kadrlar faoliyati</string>
    <string name="math_complex">Fizika Matematika kompleksi</string>
    <string name="social">Ijtimoiy Gumanitar</string>
    <string name="natural">Tabiiy Fanlar</string>
    <string name="other">Boshqa masalalar</string>
    <string name="news_message">Yangi xabarlar yo\'q</string>
    <string name="read">O\'qilgan xabarlar mavjud emas</string>
    <string name="answer">Javo berilgan xabarlar mavkud emas</string>
    <string name="answer_enter">Javobingizni kiriting</string>
    <string name="answer_s">Javob :</string>
    <string name="answered_time">17.02.2023</string>
    <string name="answered_time_s">Javob berilgan vaqt :</string>
    <string name="appeal_type">Taklif</string>
    <string name="appeal_type_s">Murojaat turi</string>
    <string name="file_name">Fayl nomi</string>
    <string name="file_name_s">Ariza.pdf</string>
    <string name="file_size_s">Fayl o\'lchami</string>
    <string name="file_size">1 MB</string>
    <string name="file_type">pdf</string>
    <string name="file_type_s">Fayl turi</string>
    <string name="file_state">Yuklanmagan</string>
    <string name="file_state_s">Fayl holati</string>
    <string name="start_reading">Ochish</string>
    <string name="downloading">Yuklanmoqda</string>
    <string name="send_file_name_s">Javob fayli :</string>
    <string name="send_file_name">Biriktirilmagan</string>
</resources>