<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_60sdp"
    android:background="@color/face_bg_color">

    <TextView

        android:id="@+id/fullName"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:ellipsize="end"
        android:fontFamily="@font/robo"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/fullname"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <ImageView

        android:id="@+id/image"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:src="@drawable/answered"
        app:layout_constraintBottom_toBottomOf="@id/time"
        app:layout_constraintRight_toLeftOf="@id/time"
        app:layout_constraintTop_toTopOf="@id/time" />

    <TextView

        android:id="@+id/time"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:ellipsize="end"
        android:fontFamily="@font/robo"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/time"
        android:textColor="#A5A4A4"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="@id/fullName"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/fullName" />

    <TextView

        android:id="@+id/appeal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:ellipsize="end"
        android:fontFamily="@font/robo"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/content"
        android:textColor="#E8ECE8"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullName" />


    <View

        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>