<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/cl"
    android:background="@color/bg_color"
    android:layout_height="match_parent">


    <ImageView

        android:id="@+id/logo"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView

        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/new_font"
        android:text="@string/news"
        android:textColor="@color/main"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintVertical_bias="0" />

    <TextView

        android:id="@+id/loginTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/new_font"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintVertical_bias="0" />

    <TextView

        android:id="@+id/emailTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/new_font"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTv"
        app:layout_constraintVertical_bias="0" />

    <TextView


        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_3sdp"
        android:text="*"
        android:textColor="#FA0303"
        android:textSize="@dimen/_12sdp"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toRightOf="@id/emailTop"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/emailTop"
        app:layout_constraintVertical_bias="0" />

    <LinearLayout

        android:id="@+id/emailLn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/back_style_search"
        app:layout_constraintTop_toBottomOf="@id/emailTop">

        <EditText

            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:fontFamily="@font/robo"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color"
            android:textCursorDrawable="@drawable/cursor_with_padding"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <TextView

        android:id="@+id/passwordTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/new_font"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLn"
        app:layout_constraintVertical_bias="0" />

    <TextView


        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_3sdp"
        android:text="*"
        android:textColor="#FA0303"
        android:textSize="@dimen/_12sdp"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toRightOf="@id/passwordTop"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/passwordTop"
        app:layout_constraintVertical_bias="0" />


    <LinearLayout

        android:id="@+id/passwordLn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/back_style_search"
        app:layout_constraintTop_toBottomOf="@id/passwordTop">

        <EditText

            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:fontFamily="@font/robo"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color"
            android:textCursorDrawable="@drawable/cursor_with_padding"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/back_style_next_button"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.airbnb.lottie.LottieAnimationView

        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/prog" />

</androidx.constraintlayout.widget.ConstraintLayout>